iOS: Fix gamepad detection when becoming firstResponder https://bugs.webkit.org/show_bug.cgi?id=269292

Reviewed by Brady Eidson.

Gamepads were only detected at initial load of the page if the WKWebView
were marked as the firstResponder, rather than detecting when the
WKWebView becomes or resigns the firstResponder.

This aligns the behaviour with WKWebView on macOS.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView becomeFirstResponderForWebView]):
(-[WKContentView resignFirstResponderForWebView]):
Enable/disable checking for gamepads when the WKWebView becomes or
resigns firstResponder status.

Canonical link: https://commits.webkit.org/279124@main